Parcher helped me fix the grid and center align, columns already have width so becareful about adding margin, use padding

--- a/assets/stylesheets/sass/custom.sass
+++ b/assets/stylesheets/sass/custom.sass
@@ -1,7 +1,9 @@
 @import "bootstrap"
 
+.container
+	width: 1100px
+
 body
-	max-width: 1100px
 	background-color: lightblue
 	padding-top: 70px
 
@@ -20,9 +22,7 @@ h1
 .col-md-6
 	height: 200px
 	background-color: grey
-	margin: 1px
 
 .col-md-8, .col-md-4
 	height: 200px
 	background-color: grey
-	margin: 1px
